# CPlugin

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  PluginModel.py  README.md
SampleModel/: CMakeLists.txt  ModelInfo.h  SampleModel.cpp  parameters.cpp  parameters.hh  sphere.cpp  stdafx.h  winFuncs.h
SimpleModel/: CMakeLists.txt  ModelInfo.h  SimpleModel.cpp
SphereModel/: CMakeLists.txt  SphereModel.cpp
